Add tenancy and fortify

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME="Mini Dental App"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:8fPy83X1mr5VifF1o9eEh2Y8cnsjsAW2KVvFr8/rK0g=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -28,7 +28,7 @@ DB_DATABASE=mini_dental_app
 DB_USERNAME=root
 DB_PASSWORD=
 
-SESSION_DRIVER=database
+SESSION_DRIVER=db_table
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
